--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,21 +11,13 @@ jobs:
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v3
-
-    - name: Start SSH Agent and add key
-      env:
-        SSH_KEY: ${{ secrets.SSH_KEY }}
-      run: |
-        eval "$(ssh-agent -s)"
-        echo "$SSH_KEY" | tr -d '\r' | ssh-add -
-
-    - name: Deploy to VPS
-      env:
-        HOST: ${{ secrets.HOST }}
-        USER: ${{ secrets.USERNAME }}
-      run: |
-        ssh -o StrictHostKeyChecking=no $USER@$HOST << 'EOF'
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        user: ${{ secrets.USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        port: 22
+        script: |
           cd /test-action
           git pull origin master
-        EOF
+          git status
